<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
        android:background="@drawable/bg_gradient"
            tools:context=".view.ads.AdsFragment">

        <Button
            android:id="@+id/btnUpdatePro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_ads"
            android:text="@string/buy_pro_version"
            style="@style/SettingsButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/btnSwitchTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_day_night"
            android:textAlignment="viewStart"
            app:layout_constraintTop_toBottomOf="@id/btnUpdatePro"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_share_button"
            android:text="@string/share"
            android:textAlignment="viewStart"
            style="@style/SettingsButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSwitchTheme"/>

        <Button
            android:id="@+id/btnRateApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_rate"
            android:text="@string/rating_review"
            android:textAlignment="viewStart"
            style="@style/SettingsButton"
            app:layout_constraintTop_toBottomOf="@id/btnShare"/>

        <Button
            android:id="@+id/btnEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email"
            android:text="@string/contact_email"
            android:textAlignment="viewStart"
            style="@style/SettingsButton"
            app:layout_constraintTop_toBottomOf="@id/btnRateApp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>