<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
            tools:context=".view.manual_mode.ManualFragment"
    android:clipToPadding="false"
    android:paddingBottom="100dp">

    <TextView
            android:id="@+id/tvWaitTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_pause_time_placeholder"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.agilie.circularpicker.ui.view.CircularPickerView
            android:id="@+id/cpPauseTime"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWaitTime" />

    <TextView
            android:id="@+id/tvVibroTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_vibro_time_placeholder"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cpPauseTime" />

    <com.agilie.circularpicker.ui.view.CircularPickerView
            android:id="@+id/cpVibroTime"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvVibroTime" />

    <Button
            android:id="@+id/btnStartStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="25dp"
            android:textSize="46sp"
            android:text="@string/start"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>